[project]
name = "mx"
dynamic = ["version"]
description = 'The Microsoft MX floating point library'
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch==2.2.0",
    "torchvision==0.16",
    "torchaudio==2.1.0"
]
license = { file = "LICENSE" }
keywords = ["mx", "floating point", "math", "mathematics", "machine learning", "deep learning", "artificial intelligence", "ai", "ml", "dl", "torch", "torchvision", "torchaudio"]
authors = [
  { name = "The Microsoft CAST Algorithms Team", email = "placeholder@microsoft.com" },
]

[build-system]
requires = ["hatchling", "hatch-vcs", "pytest", "ninja", "wheel", "torch", "torchvision", "torchaudio"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/mx",
]


[tool.hatch.build.targets.wheel]
include = [
    "/mx",
]

#[tool.hatch.build.hooks.custom]
#path = "build.py"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "." }

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"